# nixowos

./: .gitmodules  README.md  flake.nix
home/: flake.nix  home.nix
home-manager/evergarden/kurisu/: home.nix
home/pkgs/: default.nix
home/pkgs/apps/: default.nix
home/pkgs/tools/: default.nix
home/pkgs/utils/: default.nix
homes/x86_64-linux/kurisu@evergarden/: default.nix
modules/home-manager/: default.nix
modules/home-manager/audio/: default.nix  spotify.nix
modules/home-manager/browser/: chrome.nix  default.nix  firefox.nix  zen.nix
modules/home-manager/communication/: default.nix  mail.nix  vesktop.nix
modules/home-manager/editor/: helix.nix
modules/home-manager/gamedev/: default.nix  godot.nix
modules/home-manager/hacking/: binary.nix  default.nix  forensic.nix  net.nix  web.nix
modules/home/host/: default.nix
modules/home/user/: default.nix
modules/nixos/: default.nix  kvmfr-options.nix  storage-optimization.nix
modules/nixos/nix/: default.nix
modules/nixos/user/: default.nix
modules/nixos/windows-manager/: cosmic.nix  default.nix
nixos/: configuration.nix  flake.nix  hardware-configuration.nix
nixos/evergarden/: configuration.nix  disk-configuration.nix  hardware-configuration.nix
nixos/kbd_layouts/: colemak_dh  custom_at
overlays/: default.nix
overlays/firefox/: default.nix
overlays/webcord/: default.nix
pkgs/: default.nix  kvmfr-package.nix  pcsc-dotnet.nix  sqldeveloper-latest.nix
pkgs/burpsuite/: default.nix
templates/rust/bevy/: Cargo.toml  flake.nix
templates/rust/bevy/.cargo/: config.toml
(+144 files in other folders)
